--- a/DoyleScribner/pom.xml
+++ b/DoyleScribner/pom.xml
@@ -14,11 +14,12 @@
 			<dependency>
 				<groupId>junit</groupId>
 				<artifactId>junit</artifactId>
-				<version>4.10</version>
+				<version>4.8.1</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
   <build>
+      <finalName>doylescribner</finalName>
     <sourceDirectory>src</sourceDirectory>
     <testSourceDirectory>test</testSourceDirectory>
     <plugins>
