--- a/DoyleScribner/pom.xml
+++ b/DoyleScribner/pom.xml
@@ -31,14 +31,16 @@
           </plugin>
     </plugins>
   </build>
-  <dependencyManagement>
-  	<dependencies>
-  		<dependency>
-  			<groupId>junit</groupId>
-  			<artifactId>junit</artifactId>
-  			<version>4.8.1</version>
-  			<scope>test</scope>
-  		</dependency>
-  	</dependencies>
-  </dependencyManagement>
+  <dependencies>
+  	<dependency>
+  		<groupId>org.hamcrest</groupId>
+  		<artifactId>hamcrest-all</artifactId>
+  		<version>1.3</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>junit</groupId>
+  		<artifactId>junit</artifactId>
+  		<version>4.10</version>
+  	</dependency>
+  </dependencies>
 </project>
