--- a/BoardFeetCalculator/AndroidManifest.xml
+++ b/BoardFeetCalculator/AndroidManifest.xml
@@ -7,6 +7,10 @@
         android:minSdkVersion="10"
         android:targetSdkVersion="15" />
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -16,7 +20,6 @@
             android:label="@string/title_activity_calculator" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
